# icfpc2020

./: .gitignore  Cargo.toml  LICENSE  README.md  host.7z
app/: main.rs
data/: i_stateful.txt  i_stateless.txt  recursive.txt
host/: Cargo.toml  eval.py
host/data/: i_galaxy.txt  s.txt  send.txt  test.txt
host/src/: eval.rs  interact.rs  main.rs  modem.rs  send.rs  syntax.rs  test  test.rs  types.rs  ui.rs
src/: eval.rs  interact.rs  main.rs  runtime.rs  send.rs  test.rs  translator.rs  ui.rs
