[package]
name = "host"
version = "0.1.0"
authors = ["Dmitry Polyanitsa <coffeecup.winner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "../vendor"

[dependencies]
bmp = "^0.5"
fltk = "^0.7"
http-body = "0.3.1"
hyper = "0.13.5"
hyper-tls = "0.4.3"
tokio = { version = "0.2.21", features = ["macros"] }
